Fix spacing in contact section

--- a/frontend/src/components/Contact.scss
+++ b/frontend/src/components/Contact.scss
@@ -2,7 +2,7 @@ $accent: #e4007c;
 
 .contact-us-container {
   width: 50%;
-  height: 400px;
+  height: 450px;
   display: flex;
   flex-direction: column;
   justify-content: center;
